--- a/TicTacToe/src/views/StartPage/SignIn.fxml
+++ b/TicTacToe/src/views/StartPage/SignIn.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="700.0" prefWidth="1200.0" stylesheets="@newCascadeStyleSheet.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="views.SignInController">
+<AnchorPane id="AnchorPane" prefHeight="700.0" prefWidth="1200.0" stylesheets="@newCascadeStyleSheet.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="views.StartPage.SignInController">
     <children>
       <AnchorPane prefHeight="700.0" prefWidth="1200.0" />
       <ImageView fitHeight="781.0" fitWidth="1283.0" styleClass="form_box">
