--- a/TicTacToe/src/views/StartPage/SingUp.fxml
+++ b/TicTacToe/src/views/StartPage/SingUp.fxml
@@ -9,7 +9,11 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="views.StartPage.SingUpController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="
+http://javafx.com/javafx/17
+" xmlns:fx="
+http://javafx.com/fxml/1
+" fx:controller="views.StartPage.SingUpController">
    <children>
       <AnchorPane id="AnchorPane" prefHeight="700.0" prefWidth="1200.0" stylesheets="@newCascadeStyleSheet.css">
           <children>
@@ -46,4 +50,4 @@
           </children>
       </AnchorPane>
    </children>
-</AnchorPane>
+</AnchorPane> 
