--- a/TicTacToe/src/views/SinglePlayer/SinglePlayer.fxml
+++ b/TicTacToe/src/views/SinglePlayer/SinglePlayer.fxml
@@ -14,7 +14,7 @@
    <children>
       <AnchorPane fx:id="ap" prefHeight="707.0" prefWidth="1194.0">
          <children>
-            <Button fx:id="restartbtn" layoutX="916.0" layoutY="573.0" mnemonicParsing="false" prefHeight="72.0" prefWidth="222.0" text="Restart" />
+            <Button fx:id="restartbtn" onAction="#restart"  layoutX="916.0" layoutY="573.0" mnemonicParsing="false" prefHeight="72.0" prefWidth="222.0" text="Restart" />
             <BorderPane layoutX="847.0" layoutY="52.0" prefHeight="412.0" prefWidth="339.0">
                <top>
                   <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="63.0" prefWidth="357.0" text="AI[Might give him/her a name]" textAlignment="CENTER" BorderPane.alignment="CENTER" />
@@ -24,7 +24,7 @@
                </bottom>
             </BorderPane>
             <Button fx:id="backbtn" layoutX="54.0" layoutY="573.0" mnemonicParsing="false" onAction="#back2MainRoom" prefHeight="72.0" prefWidth="222.0" text="Back to MainRoom" />
-            <GridPane alignment="CENTER_RIGHT" hgap="10.0" layoutX="369.0" layoutY="86.0" prefHeight="412.0" prefWidth="463.0" vgap="10.0">
+            <GridPane fx:id="grid"  alignment="CENTER_RIGHT" hgap="10.0" layoutX="369.0" layoutY="86.0" prefHeight="412.0" prefWidth="463.0" vgap="10.0">
                <columnConstraints>
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -36,47 +36,47 @@
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                </rowConstraints>
                <children>
-                  <Button fx:id="btn1" mnemonicParsing="false" prefHeight="131.0" prefWidth="206.0">
+                  <Button fx:id="btn1"  onAction="#PlayerMove"  mnemonicParsing="false" prefHeight="131.0" prefWidth="206.0">
                      <font>
                         <Font size="64.0" />
                      </font>
                   </Button>
-                  <Button fx:id="btn4" mnemonicParsing="false" prefHeight="147.0" prefWidth="155.0" GridPane.rowIndex="1">
+                  <Button fx:id="btn4" onAction="#PlayerMove"  mnemonicParsing="false" prefHeight="147.0" prefWidth="155.0" GridPane.rowIndex="1">
                      <font>
                         <Font size="64.0" />
                      </font>
                   </Button>
-                  <Button fx:id="btn7" mnemonicParsing="false" prefHeight="147.0" prefWidth="155.0" GridPane.rowIndex="2">
+                  <Button fx:id="btn7" onAction="#PlayerMove"  mnemonicParsing="false" prefHeight="147.0" prefWidth="155.0" GridPane.rowIndex="2">
                      <font>
                         <Font size="64.0" />
                      </font>
                   </Button>
-                  <Button fx:id="btn2" mnemonicParsing="false" prefHeight="147.0" prefWidth="155.0" GridPane.columnIndex="1">
+                  <Button fx:id="btn2" onAction="#PlayerMove"  mnemonicParsing="false" prefHeight="147.0" prefWidth="155.0" GridPane.columnIndex="1">
                      <font>
                         <Font size="64.0" />
                      </font>
                   </Button>
-                  <Button fx:id="btn5" mnemonicParsing="false" onAction="#PlayerMove" prefHeight="147.0" prefWidth="155.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                  <Button fx:id="btn5" onAction="#PlayerMove"  mnemonicParsing="false" prefHeight="147.0" prefWidth="155.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
                      <font>
                         <Font size="64.0" />
                      </font>
                   </Button>
-                  <Button fx:id="btn3" mnemonicParsing="false" prefHeight="147.0" prefWidth="155.0" GridPane.columnIndex="2">
+                  <Button fx:id="btn3" onAction="#PlayerMove"  mnemonicParsing="false" prefHeight="147.0" prefWidth="155.0" GridPane.columnIndex="2">
                      <font>
                         <Font size="64.0" />
                      </font>
                   </Button>
-                  <Button fx:id="btn6" mnemonicParsing="false" prefHeight="147.0" prefWidth="155.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
+                  <Button fx:id="btn6" onAction="#PlayerMove" mnemonicParsing="false" prefHeight="147.0" prefWidth="155.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
                      <font>
                         <Font size="64.0" />
                      </font>
                   </Button>
-                  <Button fx:id="btn8" mnemonicParsing="false" prefHeight="147.0" prefWidth="155.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                  <Button fx:id="btn8" onAction="#PlayerMove"  mnemonicParsing="false" prefHeight="147.0" prefWidth="155.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
                      <font>
                         <Font size="64.0" />
                      </font>
                   </Button>
-                  <Button fx:id="btn9" mnemonicParsing="false" prefHeight="147.0" prefWidth="155.0" GridPane.columnIndex="2" GridPane.rowIndex="2">
+                  <Button fx:id="btn9" onAction="#PlayerMove"  mnemonicParsing="false" prefHeight="147.0" prefWidth="155.0" GridPane.columnIndex="2" GridPane.rowIndex="2">
                      <font>
                         <Font size="64.0" />
                      </font>
