--- a/TicTacToe/src/views/MainRoom/MainRoom.fxml
+++ b/TicTacToe/src/views/MainRoom/MainRoom.fxml
@@ -1,62 +1,124 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane prefHeight="700.0" prefWidth="1200.0" style="-fx-background-color: #6E8897;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="views.MainRoom.MainRoomController">
-   <left>
-      <BorderPane prefHeight="633.0" prefWidth="368.0" BorderPane.alignment="CENTER">
+<AnchorPane prefHeight="700.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="views.MainRoom.MainRoomController">
+   <children>
+      <ImageView id="img" fitHeight="746.0" fitWidth="1291.0" layoutY="-4.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@bg.png" />
+         </image>
+      </ImageView>
+      <BorderPane fx:id="plist" layoutY="-4.0" prefHeight="745.0" prefWidth="305.0" visible="false">
          <top>
-            <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="47.0" prefWidth="368.0" style="-fx-background-color: A0B2BE;" text="Lis of Players" BorderPane.alignment="CENTER" />
+            <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="44.0" prefWidth="305.0" style="-fx-background-color: #DBDBDB;" text="List of Players" BorderPane.alignment="CENTER">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font></Label>
          </top>
          <center>
-            <TextArea fx:id="playersList" editable="false" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
+            <TextArea id="plist" fx:id="playersList" editable="false" prefHeight="711.0" prefWidth="331.0" BorderPane.alignment="CENTER">
+               <font>
+                  <Font size="18.0" />
+               </font></TextArea>
          </center>
+         <bottom>
+            <Button fx:id="refresh" mnemonicParsing="false" onAction="#refresh" prefHeight="37.0" prefWidth="304.0" text="Refresh" BorderPane.alignment="CENTER" />
+         </bottom>
       </BorderPane>
-   </left>
-   <center>
-      <AnchorPane prefHeight="688.0" prefWidth="378.0" BorderPane.alignment="CENTER">
-         <children>
-            <Button fx:id="multiBTN" layoutX="41.0" layoutY="229.0" mnemonicParsing="false" onAction="#PlayVsFriend" prefHeight="73.0" prefWidth="305.0" style="-fx-background-color: #A0B2BE;" text="Play with a friend" />
-            <Button fx:id="signleBTN" layoutX="41.0" layoutY="116.0" mnemonicParsing="false" onAction="#PlayVsAI" prefHeight="81.0" prefWidth="305.0" style="-fx-background-color: #A0B2BE;" text="Play vs Computer" />
-            <Button fx:id="showBTN" layoutX="41.0" layoutY="336.0" mnemonicParsing="false" onAction="#ShowPlayers" prefHeight="81.0" prefWidth="305.0" style="-fx-background-color: #A0B2BE;" text="Show list of players" />
-         </children>
-      </AnchorPane>
-   </center>
-   <right>
-      <BorderPane prefHeight="682.0" prefWidth="405.0" BorderPane.alignment="CENTER">
-         <center>
-            <TextArea fx:id="globalchat" editable="false" prefHeight="595.0" prefWidth="405.0" BorderPane.alignment="CENTER">
-               <BorderPane.margin>
-                  <Insets />
-               </BorderPane.margin>
-            </TextArea>
-         </center>
+      <BorderPane layoutX="975.0" layoutY="2.0" prefHeight="745.0" prefWidth="305.0">
          <top>
-            <Label alignment="CENTER" prefHeight="32.0" prefWidth="440.0" style="-fx-background-color: #A0B2BE;" text="Global Chat" BorderPane.alignment="CENTER" />
+            <Label alignment="CENTER" prefHeight="27.0" prefWidth="410.0" style="-fx-background-color: #DBDBDB;" text="Global Chat" BorderPane.alignment="CENTER">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font>
+            </Label>
          </top>
          <bottom>
-            <FlowPane hgap="10.0" prefHeight="49.0" prefWidth="405.0" BorderPane.alignment="CENTER">
+            <FlowPane hgap="10.0" prefHeight="30.0" prefWidth="405.0" BorderPane.alignment="CENTER">
                <children>
-                  <Label prefHeight="42.0" prefWidth="105.0" text="Send a Message" textFill="#d3d0cb">
+                  <TextField id="field" fx:id="msg" prefHeight="37.0" prefWidth="308.0" promptText="Write  a message...">
                      <font>
-                        <Font name="System Bold" size="14.0" />
-                     </font></Label>
-                  <TextField fx:id="msg" prefHeight="25.0" prefWidth="185.0" />
-                  <Button fx:id="sendmsg" defaultButton="true" mnemonicParsing="false" onAction="#SendingMSG" prefHeight="25.0" prefWidth="89.0" text="Send" />
+                        <Font size="18.0" />
+                     </font>
+                  </TextField>
+                  <Button fx:id="sendmsg" defaultButton="true" mnemonicParsing="false" onAction="#SendingMSG" prefHeight="25.0" prefWidth="38.0" style="-fx-background-color: transparent;">
+                     <graphic>
+                        <ImageView fitHeight="22.0" fitWidth="17.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@android-send_icon-icons.com_50500.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                     <FlowPane.margin>
+                        <Insets left="-50.0" />
+                     </FlowPane.margin>
+                  </Button>
                </children>
             </FlowPane>
          </bottom>
+         <center>
+            <TextArea id="field" fx:id="globalchat" editable="false" prefHeight="262.0" prefWidth="370.0" BorderPane.alignment="CENTER">
+               <BorderPane.margin>
+                  <Insets />
+               </BorderPane.margin>
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font>
+            </TextArea>
+         </center>
       </BorderPane>
-   </right>
-   <padding>
-      <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-   </padding>
-</BorderPane>
+      <AnchorPane id="anchorPane" layoutX="403.0" layoutY="28.0" prefHeight="671.0" prefWidth="465.0">
+         <children>
+            <Button fx:id="multiBTN" layoutX="97.0" layoutY="365.0" mnemonicParsing="false" onAction="#PlayVsFriend" prefHeight="80.0" prefWidth="310.0" text="Play with a friend" />
+            <Button fx:id="signleBTN" layoutX="97.0" layoutY="230.0" mnemonicParsing="false" onAction="#PlayVsAI" prefHeight="80.0" prefWidth="310.0" text="Play vs Computer" />
+            <Button fx:id="showBTN" layoutX="97.0" layoutY="497.0" mnemonicParsing="false" onAction="#ShowPlayers" prefHeight="80.0" prefWidth="310.0" text="Show list of players" />
+            <Label layoutX="53.0" layoutY="55.0" prefHeight="25.0" prefWidth="110.0" text="PlayerName:" textFill="#fffefe">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font>
+            </Label>
+            <Label layoutX="53.0" layoutY="96.0" prefHeight="17.0" prefWidth="59.0" text="Score:" textFill="#fffefe">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font>
+            </Label>
+            <Label layoutX="53.0" layoutY="134.0" prefHeight="27.0" prefWidth="59.0" text="Wins:" textFill="#fffefe">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font>
+            </Label>
+            <Label fx:id="labelName" layoutX="226.0" layoutY="55.0" prefHeight="25.0" prefWidth="110.0" textFill="#fffefe">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font>
+            </Label>
+            <Label fx:id="labelScore" layoutX="226.0" layoutY="96.0" prefHeight="27.0" prefWidth="110.0" textFill="#fffefe">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font>
+            </Label>
+            <Label fx:id="labelWins" layoutX="226.0" layoutY="134.0" prefHeight="27.0" prefWidth="96.0" textFill="#fffefe">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font>
+            </Label>
+         </children>
+      </AnchorPane>
+   </children>
+   <stylesheets>
+      <URL value="@Style.css" />
+      <URL value="@Style.css" />
+   </stylesheets>
+</AnchorPane>
