--- a/TicTacToe/src/views/MainRoom/MainRoom.fxml
+++ b/TicTacToe/src/views/MainRoom/MainRoom.fxml
@@ -4,6 +4,8 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -27,15 +29,17 @@
                   <Font name="System Bold" size="18.0" />
                </font></Label>
          </top>
-         <center>
-            <TextArea id="plist" fx:id="playersList" editable="false" prefHeight="711.0" prefWidth="331.0" BorderPane.alignment="CENTER">
-               <font>
-                  <Font size="18.0" />
-               </font></TextArea>
-         </center>
          <bottom>
             <Button fx:id="refresh" mnemonicParsing="false" onAction="#refresh" prefHeight="37.0" prefWidth="304.0" text="Refresh" BorderPane.alignment="CENTER" />
          </bottom>
+         <center>
+            <TableView fx:id="tableView" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+              <columns>
+                <TableColumn fx:id="name" prefWidth="158.39996033906937" text="Player Name" />
+                <TableColumn fx:id="status" prefWidth="146.40000305175784" text="Status" />
+              </columns>
+            </TableView>
+         </center>
       </BorderPane>
       <BorderPane layoutX="975.0" layoutY="2.0" prefHeight="745.0" prefWidth="305.0">
          <top>
@@ -81,39 +85,40 @@
       </BorderPane>
       <AnchorPane id="anchorPane" layoutX="403.0" layoutY="28.0" prefHeight="671.0" prefWidth="465.0">
          <children>
-            <Button fx:id="multiBTN" layoutX="97.0" layoutY="365.0" mnemonicParsing="false" onAction="#PlayVsFriend" prefHeight="80.0" prefWidth="310.0" text="Play with a friend" />
+            <Button fx:id="multiBTN" disable="true" layoutX="97.0" layoutY="365.0" mnemonicParsing="false" onAction="#PlayVsFriend" prefHeight="80.0" prefWidth="310.0" text="Play with a friend" />
             <Button fx:id="signleBTN" layoutX="97.0" layoutY="230.0" mnemonicParsing="false" onAction="#PlayVsAI" prefHeight="80.0" prefWidth="310.0" text="Play vs Computer" />
             <Button fx:id="showBTN" layoutX="97.0" layoutY="497.0" mnemonicParsing="false" onAction="#ShowPlayers" prefHeight="80.0" prefWidth="310.0" text="Show list of players" />
-            <Label layoutX="53.0" layoutY="55.0" prefHeight="25.0" prefWidth="110.0" text="PlayerName:" textFill="#fffefe">
+            <Label fx:id="pN" layoutX="53.0" layoutY="55.0" prefHeight="25.0" prefWidth="110.0" text="PlayerName:" textFill="#fffefe" visible="false">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
             </Label>
-            <Label layoutX="53.0" layoutY="96.0" prefHeight="17.0" prefWidth="59.0" text="Score:" textFill="#fffefe">
+            <Label fx:id="pS" layoutX="53.0" layoutY="96.0" prefHeight="17.0" prefWidth="59.0" text="Score:" textFill="#fffefe" visible="false">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
             </Label>
-            <Label layoutX="53.0" layoutY="134.0" prefHeight="27.0" prefWidth="59.0" text="Wins:" textFill="#fffefe">
+            <Label fx:id="pW" layoutX="53.0" layoutY="134.0" prefHeight="27.0" prefWidth="59.0" text="Wins:" textFill="#fffefe" visible="false">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
             </Label>
-            <Label fx:id="labelName" layoutX="226.0" layoutY="55.0" prefHeight="25.0" prefWidth="110.0" textFill="#fffefe">
+            <Label fx:id="labelName" layoutX="226.0" layoutY="55.0" prefHeight="25.0" prefWidth="110.0" textFill="#fffefe" visible="false">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
             </Label>
-            <Label fx:id="labelScore" layoutX="226.0" layoutY="96.0" prefHeight="27.0" prefWidth="110.0" textFill="#fffefe">
+            <Label fx:id="labelScore" layoutX="226.0" layoutY="96.0" prefHeight="27.0" prefWidth="110.0" textFill="#fffefe" visible="false">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
             </Label>
-            <Label fx:id="labelWins" layoutX="226.0" layoutY="134.0" prefHeight="27.0" prefWidth="96.0" textFill="#fffefe">
+            <Label fx:id="labelWins" layoutX="226.0" layoutY="134.0" prefHeight="27.0" prefWidth="96.0" textFill="#fffefe" visible="false">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
             </Label>
+            <Button fx:id="info" layoutX="224.0" layoutY="610.0" mnemonicParsing="false" onAction="#showinfo" text="Info" />
          </children>
       </AnchorPane>
    </children>
