--- a/TicTacToe/src/views/MultiPlayer/MultiPlayer.fxml
+++ b/TicTacToe/src/views/MultiPlayer/MultiPlayer.fxml
@@ -38,22 +38,22 @@
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                </rowConstraints>
                <children>
-                  <Button fx:id="btn1" mnemonicParsing="false" prefHeight="147.0" prefWidth="155.0">
+                  <Button fx:id="btn1" mnemonicParsing="false" onAction="#PlayerMove" prefHeight="147.0" prefWidth="155.0">
                      <font>
                         <Font size="64.0" />
                      </font>
                   </Button>
-                  <Button fx:id="btn4" mnemonicParsing="false" prefHeight="147.0" prefWidth="155.0" GridPane.rowIndex="1">
+                  <Button fx:id="btn4" mnemonicParsing="false" onAction="#PlayerMove" prefHeight="147.0" prefWidth="155.0" GridPane.rowIndex="1">
                      <font>
                         <Font size="64.0" />
                      </font>
                   </Button>
-                  <Button fx:id="btn7" mnemonicParsing="false" prefHeight="147.0" prefWidth="155.0" GridPane.rowIndex="2">
+                  <Button fx:id="btn7" mnemonicParsing="false" onAction="#PlayerMove" prefHeight="147.0" prefWidth="155.0" GridPane.rowIndex="2">
                      <font>
                         <Font size="64.0" />
                      </font>
                   </Button>
-                  <Button fx:id="btn2" mnemonicParsing="false" prefHeight="147.0" prefWidth="155.0" GridPane.columnIndex="1">
+                  <Button fx:id="btn2" mnemonicParsing="false" onAction="#PlayerMove" prefHeight="147.0" prefWidth="155.0" GridPane.columnIndex="1">
                      <font>
                         <Font size="64.0" />
                      </font>
@@ -63,22 +63,22 @@
                         <Font size="64.0" />
                      </font>
                   </Button>
-                  <Button fx:id="btn3" mnemonicParsing="false" prefHeight="147.0" prefWidth="155.0" GridPane.columnIndex="2">
+                  <Button fx:id="btn3" mnemonicParsing="false" onAction="#PlayerMove" prefHeight="147.0" prefWidth="155.0" GridPane.columnIndex="2">
                      <font>
                         <Font size="64.0" />
                      </font>
                   </Button>
-                  <Button fx:id="btn6" mnemonicParsing="false" prefHeight="147.0" prefWidth="155.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
+                  <Button fx:id="btn6" mnemonicParsing="false" onAction="#PlayerMove" prefHeight="147.0" prefWidth="155.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
                      <font>
                         <Font size="64.0" />
                      </font>
                   </Button>
-                  <Button fx:id="btn8" mnemonicParsing="false" prefHeight="147.0" prefWidth="155.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                  <Button fx:id="btn8" mnemonicParsing="false" onAction="#PlayerMove" prefHeight="147.0" prefWidth="155.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
                      <font>
                         <Font size="64.0" />
                      </font>
                   </Button>
-                  <Button fx:id="btn9" mnemonicParsing="false" prefHeight="147.0" prefWidth="155.0" GridPane.columnIndex="2" GridPane.rowIndex="2">
+                  <Button fx:id="btn9" mnemonicParsing="false" onAction="#PlayerMove" prefHeight="147.0" prefWidth="155.0" GridPane.columnIndex="2" GridPane.rowIndex="2">
                      <font>
                         <Font size="64.0" />
                      </font>
