Sign In , Sign Up , completely seperated from server

--- a/TicTacToe/src/views/StartPage/SignUp.fxml
+++ b/TicTacToe/src/views/StartPage/SignUp.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="473.0" prefWidth="802.0" stylesheets="@Style.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="views.StartPage.SingUpController">
+<AnchorPane id="AnchorPane" prefHeight="473.0" prefWidth="802.0" stylesheets="@Style.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="views.StartPage.SignUpController">
    <children>
       <AnchorPane id="AnchorPane" prefHeight="473.0" prefWidth="802.0">
           <children>
