private room chat working

--- a/TicTacToe/src/views/MultiPlayer/MultiPlayer.fxml
+++ b/TicTacToe/src/views/MultiPlayer/MultiPlayer.fxml
@@ -104,7 +104,7 @@
                   <FlowPane prefHeight="52.0" prefWidth="245.0" BorderPane.alignment="CENTER">
                      <children>
                         <TextField fx:id="chatmsg" prefHeight="25.0" prefWidth="216.0" />
-                        <Button fx:id="sendbtn" defaultButton="true" mnemonicParsing="false" prefHeight="23.0" prefWidth="53.0" text="Send" />
+                        <Button fx:id="sendbtn" defaultButton="true" onAction="#SendChat" mnemonicParsing="false" prefHeight="23.0" prefWidth="53.0" text="Send" />
                      </children>
                   </FlowPane>
                </bottom>
