--- a/TicTacToe/src/views/MainRoom/MainRoom.fxml
+++ b/TicTacToe/src/views/MainRoom/MainRoom.fxml
@@ -116,6 +116,7 @@
                </font>
             </Label>
             <Button fx:id="info" layoutX="224.0" layoutY="610.0" mnemonicParsing="false" onAction="#showinfo" text="Info" />
+            <Button layoutX="349.0" layoutY="122.0" mnemonicParsing="false" onAction="#LeaderBoards" text="Button" />
          </children>
       </AnchorPane>
    </children>
