--- a/TicTacToe/src/views/StartPage/Style.css
+++ b/TicTacToe/src/views/StartPage/Style.css
@@ -1,9 +1,8 @@
-.button
+#loginbtn
 {
-        -fx-background-color: deepskyblue;
-	-fx-color: white;
-	-fx-border: none;
-	-fx-border-radius: 5px;
+        -fx-background-color: #1F8BF8;
+	
+	-fx-background-radius: 50px;
 	-fx-width: 100%;
 	-fx-font-size: 18px;
 	-fx-padding: 5px;
@@ -11,21 +10,21 @@
 }
 #anchorPane
 {
-        -fx-background-color: rgba(0, 0, 0, 0.5);
 	 -fx-margin: auto auto;
 	 -fx-padding: 40px;
-	 -fx-border-radius: 5px;
+	 -fx-border-radius: 10%;
 	 -fx-box-shadow: 0 0 10px #000;
 	 -fx-position: absolute;
 	 -fx-width: 500px;
 	 -fx-height: 430px;
+         
 }
 #field
 {
 	-fx-border: none;
 	-fx-padding: 5px;
 	-fx-border-radius: 5px;
-	-fx-width: 100%;
+	-fx-width: 385px;
 	-fx-font-size: 18px;
 	-fx-font-family: poppins;
         }
